[gd_scene load_steps=6 format=3 uid="uid://sw883a2htiqk"]

[ext_resource type="Script" uid="uid://dottqpqdur2ns" path="res://Scripts/WorldScripts/title_screen.gd" id="1_title"]
[ext_resource type="Theme" uid="uid://b482uksqacwcy" path="res://Scenes/components/game_theme.tres" id="2_theme"]
[ext_resource type="AudioStream" uid="uid://mnd8vv1n1820" path="res://Assets/Music/HighAssHomiesLobby.wav" id="3_8l4an"]
[ext_resource type="Texture2D" uid="uid://rt26e1ry0cp1" path="res://Assets/UI/TITLESCREEN.png" id="4_n15yj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vmg2h"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_title")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8l4an")
volume_db = -15.0
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = SubResource("CompressedTexture2D_vmg2h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_n15yj")

[node name="Background" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.898039)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.182419, 0.0441304, 0.192746, 1)

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 56.0
offset_right = -2.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "PLANET KILLER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="MainContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Destroy the world, one block at a time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Version" type="Label" parent="MainContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "v0.0.0.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="SettingsButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="QuitButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="DevPlayButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Dev Play"

[node name="MultiplayerButton" type="Button" parent="MainContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="HighAssHomiesLobby" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8l4an")
volume_db = -10.0
pitch_scale = 0.89
